
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Modules"                      # distribution name; OK to keep
version = "0.1.0"
description = "Probabilistic AI models and utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "matplotlib>=3.7,<3.8",   # ↓ allow the version your env can actually get
  "numpy>=1.26"
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Modules*"]              # look in project root, include your package

[tool.setuptools.package-data]
Modules = ["**/*.json", "**/*.yaml", "py.typed"]

[tool.setuptools]
include-package-data = true
